feat: #257 Add capabilities concept and update API, UI and CLI
